[package]
name = "image2ascii"
version = "0.2.1"
authors = ["kizitorashiro <kizitora.shiro@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "convert image file or string to ascii art"
readme = "README.md"
repository = "https://github.com/kizitorashiro/image2ascii"
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["cli","graphics","text","terminal"]

[badges]
travis-ci = { repository = "kizitorashiro/image2ascii" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
rusttype = "0.9.2"
tempfile = "3.1.0"
structopt = "0.3.16"
rand = "0.7.3"


